fix: #1520 - field value overflow on marketplace diff viewer (#1630)

--- a/packages/marketplace/src/styles/blocks/diff-viewer.scss
+++ b/packages/marketplace/src/styles/blocks/diff-viewer.scss
@@ -6,6 +6,10 @@
   border-radius: 3px;
   padding: 10px;
   color: $black;
+
+  span {
+    overflow-wrap: break-word;
+  }
 }
 
 .green {
